# agentpack

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: pitch.md
src/agentpack/: cli.py  compiler.py  config.py  discovery.py  watch.py
src/agentpack/ingest/: __init__.py  cid_recovery.py  office.py  quality.py  tables.py  tex_fonts.py
src/agentpack/sources/: __init__.py
src/agentpack/targets/: __init__.py  aider.py  base.py  chatgpt.py  claude.py  claude_skill.py  codex.py  copilot.py  cursor.py  gemini.py
tests/: test_cid_recovery.py  test_claude_skill.py  test_compiler.py  test_discovery.py  test_ingest.py  test_quality.py  test_tables.py  test_tex_fonts.py  test_watch.py
