[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpack-skills"
version = "0.2.0"
description = "Agent Knowledge Compiler — one source, many AI targets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "claude", "cursor", "chatgpt", "knowledge", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli>=2; python_version < \"3.11\"",
]

[project.scripts]
agentpack = "agentpack.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]
office = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.1",
]
ocr = [
    "ocrmypdf>=16",
]
watch = [
    "watchdog>=4",
]
all = [
    "markitdown[pdf,docx,pptx,xlsx]>=0.1",
    "ocrmypdf>=16",
    "watchdog>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
